--- a/cookbooks/chef-client/templates/default/com.chef.chef-client.plist.erb
+++ b/cookbooks/chef-client/templates/default/com.chef.chef-client.plist.erb
@@ -4,7 +4,7 @@
 
 <dict>
   <key>Label</key>
-  <string>com.opscode.chef-client</string>
+  <string>com.chef.chef-client</string>
 <%- if @launchd_mode == "interval" %>
   <key>Program</key>
   <string><%= @client_bin %></string>
@@ -22,9 +22,9 @@
     <string><%= option %></string>
     <% end -%>
   </array>
+  <key>KeepAlive</key>
+  <true/>
 <%- end %>
-  <key>UserName</key>
-  <string>root</string>
   <key>StandardOutPath</key>
   <string><%= node["chef_client"]["log_dir"] %>/client.log</string>
 </dict>
